# zigzag-bot-package

./: .env.example  .gitignore  Dockerfile  OpenApiMessages_pb2.py  Procfile  Procfile.txt  README.md  Untitled.ipynb  Untitled1.ipynb  analysis.py  api.py  api_clients.py  app.py  assets.json  auth.py  bot.py  config.py  crypto_pay.py  ctrader.py  ctrader_api.py  ctrader_open_api-0.0.0-py3-none-any.whl  ctrader_prod_service.py  ctrader_service.py  ctrader_websocket_client.py  data_collector.py  db.py  docker-compose.yml  economic_calendar.py  errors.py  fix_imports.py  fly-streamer.toml  fly.toml  git_requirements.txt  gunicorn.conf.py  index.html  indicator_processor.py  indicators.py  lgbm_model.pkl  lgbm_scaler.pkl  locales.py  (+32 more)
.github/: README.md  telegram_ui.py
.tmp.driveupload/: 26803  26807  26811  26815  26819  26821  26825  26829  26833  26835  26837  26841  26845  26847  26851  26855  26859  26863  26867  26871  26875  26879  26883  26887  26893  26897  26901  26905  26909  26913  26917  26921  26923  26925  26929  26933  26937  26941  26945  26947  (+33 more)
ctrader_open_api/: tcpProtocol.py
ctrader_protos/: OpenApiCommonMessages.proto  OpenApiCommonMessages_pb2.py  OpenApiCommonModelMessages_pb2.py  OpenApiMessages.proto  OpenApiMessages_pb2.py  OpenApiModelMessages_pb2.py
landing_page/: index.html  privacy.html
openapi_client/: client.py  messages.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  main.rs.save
templates/: index.html
tests/: test_analysis_contract.py
webapp/: _headers  index.html  privacy.html  script.js  script_v2.js  (+2 more)
(+7 files in other folders)
